<resources>
    <string name="app_name">Mobiuz</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="internet_packets">Internet</string>
    <string name="monthly_internet_name"><![CDATA[

        Faollashtirilgan Internet-to‘plamning holati va qoldig‘ini bilish uchun *102#
        USSD-buyrug‘idan foydalanish yoki 613019 raqamiga 3 ni yuborish kerak.<br/><br/><b>Shartlar:</b>
      ]]></string>
    <string name="monthly_internet_des"><![CDATA[


      <ul>
      <li>Internet-to`plamlardan foydalanish uchun “Mobil Internet” xizmati yoqilgan bo`lishi shart.</li>
      <li>To`plamga kiritilgan trafik hajmi to\`plam faollashtirilgan kundan boshlab
      (abonent raqami bandlangan/bandlanmaganligidan qat’iy nazar) 30 kalendar kuni davomida amal qiladi.</li>
      <li>Internet-to`plamni yoqish uchun abonent hisobida yetarlicha mablag` bo`lishi, ya’ni
       to`plam faollashtirilgandan keyin abonent hisobida kamida 42,10 so`m bo`lishi shart.</li>
      <li>Bir necha to`plamlarni xarid qilish oralig‘idagi vaqt kamida 10 daqiqani tashkil etishi kerak.</li>
      <li>Internet-to‘plamlarni xarid qilgandan so‘ng ular to‘g‘ri narxlanishi uchun telefon planshet yoki 3G modemni o‘chirib-yoqish kerak.</li>
      <li>Ushbu aksiya bo‘yicha xarid qilingan barcha to`plamlarning hajmi qo`shiladi, foydalanish
      muddati esa ohirgi xarid qilingan to`plam muddatigicha uzaytiriladi va 30 kunni tashkil etadi.</li>
      <li>Ushbu aksiya bo‘yicha xarid qilingan Internet-to‘plamlar va avvalgi “MEGAbaytlar
      kuymaydi!” aksiya bo‘yicha berilgan megabaytlar hajmi qo‘shilmaydi.</li>
      <li>Belgilangan trafik yakunlanganidan so‘ng yoki to`plam muddati tugaganidan keyin trafik belgilangan narxlar bo`yicha narxlanadi.</li>
      <li>Tarif rejasi o`zgartirilganda to`plamlarni taqdim etilish shartlari o`zgarmaydi.</li>
      <li>Abonent O`zbekiston hududida, “UMS” MChJ tarmog`ida bo`lgandagina to`plamlar amal qiladi.</li>
      </ul>

      ]]></string>
    <string name="internet_300_packet">To\'plam 300 Mb</string>
    <string name="internet_500_packet">To\'plam 500 Mb</string>
    <string name="internet_1000_packet">To\'plam 1000 Mb</string>
    <string name="internet_2000_packet">To\'plam 2000 Mb</string>
    <string name="internet_3000_packet">To\'plam 3000 Mb</string>
    <string name="internet_5000_packet">To\'plam 5000 Mb</string>
    <string name="internet_10000_packet">To\'plam 10000 Mb</string>
    <string name="internet_20000_packet">To\'plam 20000 Mb</string>
    <string name="internet_30000_packet">To\'plam 30000 Mb</string>
    <string name="internet_50000_packet">To\'plam 50000 Mb</string>
    <string name="night_internet_name"><![CDATA[

       Tungi Internet-to’plam qoldig‘ini *203# USSD-buyrug’i yoki 616203 raqamiga 3 sonini sms-xabar
       tariqasida yuborish orqali tekshirib ko’rish mumkin.<br><br/><br/><b>Shartlar:</b>
      ]]></string>
    <string name="night_internet_des"><![CDATA[


      <ul>
      <li>Tungi internet-to’plamlar uchun haq bir marta, faollashtirilgan paytda yechib olinadi.</li>
      <li>Har bir internet-to’plam 30 kalendar kuni davomida, abonent vaqtinchalik blokirovka qilingan muddatdan qat’iy nazar amal qiladi</li>
      <li>Tungi internet-to’plamlar 00:00dan 8:00gacha sarflanadi.</li>
      <li>Faollashtirilgandan so’ng abonent hisobida kamida 0,01 sh.b. qolsagina to’plamga ulanish mumkin.</li>
      <li>Barcha sotib olingan to’plamlarning hajmi qo’shiladi, ularning foydalanish muddati
       esa har bir yangi to’plam faollashtirilgan kundan boshlab 30 kunga uzaytiriladi.</li>
      <li>Belgilangan trafik yakunlansa yoki to’plamning amal qilish muddati o’tsa, trafik abonent foydalanayotgan tarif bo’yicha hisoblanadi.</li>
      <li>«Tungi Drive» xizmati yoqilgan bo’lsa, sotib olingan tungi internet-to’plam trafigi sarflanmaydi.</li>
      <li>Bir nechta to’plamlarni harid qilish o’rtasidagi farq 10 daqiqadan kam bo’lmasligi kerak.</li>
      <li>To’plamlar abonent O’zbekiston Respublikasi hududida «UMS» MChJ tarmogida bo’lgandagina amal qiladi.</li>
      <li>Tungi internet-to’plamlar to’g’ri ishlashi uchun har kuni soat 00:00dan keyin internetni
      o’chirib, qayta yoqish lozim. Aks xolda tungi internet to’plamlarning ishga tushishi kafolatlanmaydi.</li>
      </ul>

      ]]></string>
    <string name="night_1000">Tun 1000 Mb</string>
    <string name="night_2000">Tun 2000 Mb</string>
    <string name="night_3000">Tun 3000 Mb</string>
    <string name="night_5000">Tun 5000 Mb</string>
    <string name="night_10000">Tun 10000 Mb</string>
    <string name="night_20000">Tun 20000 Mb</string>
    <string name="night_50000">Tun 50000 Mb</string>
    <string name="night_drive_internet_name"><![CDATA[

        Yuridik shaxslar xizmatni faollashtirish uchun yozma ariza bilan murojaat qilishlari kerak.<br><br/><br/>
        <b>Diqqat:</b>«Tungi DRIVE» va «4G LTE tarmog’iga kirish» xizmatlari bir-birini
         inkor etuvchi bo’lib, bir vaqtning o’zida faqat bitta xizmat ishlashi mumkin.<br/><br/>
         <b>Shartlar:</b>
      ]]></string>
    <string name="night_drive_internet_des"><![CDATA[


      <ul>
      <li>«Tungi DRIVE 1» xizmati uchun haq xizmat amal qiladigan bir davr uchun bir marta undiriladi.
       Agar abonent xizmatning yana bir tungi davrda amal qilishini istasa, ulanish takroran amalga oshirilishi kerak.
       Xizmatning amal qilish muddati faollashtirish vaqtidan boshlab 24 soatni tashkil qiladi;</li>
      <li>«Tungi DRIVE 7» va «Tungi DRIVE 30» opsiyalari uchun haq bir marta undiriladi.
       Xizmatning amal qilish muddati opsiya ulangan vaqtdan boshlab tegishlicha 7 va 30 sutkani tashkil etadi;</li>
      <li>bir vaqtning o‘zida uchta opsiyadan faqat bittasi ulanishi mumkin;</li>
      <li>«Tungi DRIVE» xizmatiga «Absolut»dan boshqa barcha tarif rejalarining abonentlari ulanishi mumkin;</li>
      <li>siz sotib olgan internet-to‘plamlar va tarif rejalari doirasidagi to‘plamlar bo‘yicha megabaytlar
      «Tungi DRIVE 1», «Tungi DRIVE 7» va «Tungi DRIVE 30» xizmatlaridan foydalanilayotganda (soat 0:00dan 8:00gacha) kamaymaydi;</li>
      <li>«Tungi DRIVE» xizmatini ulash uchun abonentning balansida mablag‘ bor bo‘lishi kerak;</li>
      <li>«Tungi DRIVE» xizmati faqat bandlanmagan holatda ishlaydi;</li>
      <li>Tarif o‘zgarganda ham «Tungi DRIVE» xizmati saqlanib qoladi;</li>
      <li>Xizmat faqat O‘zbekiston hududida amal qiladi;</li>
      <li>«Tungi DRIVE» xizmati to‘g‘ri ishlashi uchun joriy sessiyani to‘xtatib, soat 00:00dan
       keyin yangisini boshlash kerak. Aks holda «Tungi DRIVE» to‘g‘ri ishlashi kafolatlanmaydi;</li>
      <li>«Tungi DRIVE» xizmati o‘chiriladigan hollarda narxlar to‘g‘ri chiqarilishi uchun dastlab barcha faol Internet sessiyalar yakunlanishi zarur;</li>
      <li>Internetdan foydalanilayotganda har 60 daqiqada ulanish uzilib, sessiya yangilanadi;</li>
      <li>Soat 0:00dan 8:00gacha bo‘lgan davrda «Tungi DRIVE» xizmati o‘chirilgan taqdirda,
      Internet-trafik tarif rejasiga muvofiq narxlana boshlaydi yoki Internet-to‘plamni sarflaydi (agar bor bo‘lsa);</li>
      </ul>

      ]]></string>
    <string name="night_drive_1_sutka">1 Sutka</string>
    <string name="night_drive_7_sutka">7 Sutka</string>
    <string name="night_drive_30_sutka">30 Sutka</string>
    <string name="onNet_column">OnNet TO\'PLAMLAR</string>
    <string name="onNet_300">OnNet 100 Mb</string>
    <string name="onNet_500">OnNet 500 Mb</string>
    <string name="onNet_1000">OnNet 1000 Mb</string>
    <string name="onNet_2000">OnNet 2000 Mb</string>
    <string name="onNet_3000">OnNet 3000 Mb</string>
    <string name="onNet_5000">OnNet 5000 Mb</string>
    <string name="onNet_10000">OnNet 10000 Mb</string>
    <string name="onNet_20000">OnNet 20000 Mb</string>
    <string name="onNet_30000">OnNet 30000 Mb</string>
    <string name="onNet_50000">OnNet 50000 Mb</string>
    <string name="mini_column">KUNLIK TO\'PLAMLAR</string>
    <string name="day_50">Kunlik 50 Mb</string>
    <string name="day_100">Kunlik 100 Mb</string>
    <string name="day_200">Kunlik 200 Mb</string>
    <string name="day_300">Kunlik 300 Mb</string>
    <string name="day_500">Kunlik 500 Mb</string>
    <string name="day_1000">Kunlik 1 000 Mb</string>
    <string name="day_2000">Kunlik 2 000 Mb</string>
    <string name="day_3000">Kunlik 3 000 Mb</string>
    <string name="day_5000">Kunlik 5 000 Mb</string>
    <string name="day_10000">Kunlik 10 000 Mb</string>
    <string name="internet_settings_dialog_1_raw">Mobil internet sozlamalarni olish</string>
    <string name="internet_settings_dialog_2_raw">Mobil internet xizmatini yoqish</string>
    <string name="internet_settings_dialog_3_raw">Mobil internet xizmatini o\'chirish</string>
    <string name="internet_settings_dialog_4_raw">OnNet to\'plamini o\'chirish</string>
    <string name="checking_button">QOLDIQNI TEKSHIRISH</string>
    <string name="monthly_column">OYLIK</string>
    <string name="night_column">TUNGI</string>
    <string name="night_drive_column">TUNGI DRIVE</string>
    <string name="tariffs">Tariflar</string>
    <string name="apply_button">O\'tish</string>
    <string name="mobi_16_title">Mobi 16</string>
    <string name="mobi_16_info">  16 000/800 so\'m / oy - 1 600/53 daqiqa O\'zbekiston bo\'yicha chiquvchi qo\'ng\'iroqlarga,
        1 600/53 MB mobil internet, 160/5 SMS, kiruvchi qo\'ng\'iroqlar 0 so\'m
    </string>
    <string name="mobi_20_title">Mobi 20</string>
    <string name="mobi_20_info">  20 000/1 000 so\'m / oy - 2 000/67 daqiqa O\'zbekiston bo\'yicha chiquvchi qo\'ng\'iroqlarga,
        2 000/67 MB mobil internet, 2 000/67 SMS, kiruvchi qo\'ng\'iroqlar 0 so\'m
    </string>
    <string name="mobi_25_title">Mobi 25</string>
    <string name="mobi_25_info">  25 000/1 250 so\'m / oy - 3 500/117 daqiqa O\'zbekiston bo\'yicha chiquvchi qo\'ng\'iroqlarga,
        3 500/117 MB mobil internet, 3 500/117 SMS, kiruvchi qo\'ng\'iroqlar 0 so\'m
    </string>
    <string name="mobi_30_title">Mobi 30+</string>
    <string name="mobi_30_info">  30 000/1 500 so\'m / oy - 5 000/167 daqiqa O\'zbekiston bo\'yicha chiquvchi qo\'ng\'iroqlarga,
        5 000/167 MB mobil internet, 3 500/117 SMS, kiruvchi qo\'ng\'iroqlar 0 so\'m </string>
    <string name="mobi_40_title">Mobi 40</string>
    <string name="mobi_40_info">  40 000/2 000 so\'m / oy - UNLIM tarmoq ichida, 5 000/167 daqiqa O\'zbekiston bo\'yicha chiquvchi qo\'ng\'iroqlarga,
        8 000/267 MB mobil internet, 3 500/117 SMS, kiruvchi qo\'ng\'iroqlar 0 so\'m </string>
    <string name="mobi_50_title">Mobi 50+</string>
    <string name="mobi_50_info"> 50 000/2 500 so\'m / oy - UNLIM tarmoq ichida, 5 000/167 daqiqa O\'zbekiston bo\'yicha chiquvchi qo\'ng\'iroqlarga,
        10 000/333 MB mobil internet, 3 500/117 SMS, kiruvchi qo\'ng\'iroqlar 0 so\'m </string>
    <string name="mobi_60_title">Mobi 60</string>
    <string name="mobi_60_info"> 60 000/3 000 so\'m / oy - UNLIM tarmoq ichida, 5 000/167 daqiqa O\'zbekiston bo\'yicha chiquvchi qo\'ng\'iroqlarga,
        15 000/500 MB mobil internet, 3 500/117 SMS, kiruvchi qo\'ng\'iroqlar 0 so\'m </string>
    <string name="mobi_70_title">Mobi 70</string>
    <string name="minutes_packages">Daqiqa va SMS</string>
    <string name="services">Xizmatlar</string>
    <string name="balance">Balans</string>
    <string name="useful">Foydali</string>
    <string name="change_language">Til o\'zgartirish</string>
    <string name="support_service">Qo\'llab quvvatlash markazi</string>
    <string name="call_to_call_center">Bog\'lanish</string>
    <string name="share">Baham ko\'rish</string>
    <string name="tg_kanal">Telegram</string>
    <string name="rate">Baholash</string>
</resources>