<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:weightSum="1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:paddingLeft="10dp"
                            android:layout_marginBottom="3dp"
                            android:layout_gravity="bottom"
                            android:src="@drawable/ic_union"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="400dp"
                            android:layout_weight="1"
                            android:layout_margin="6dp"
                            android:orientation="vertical"
                            tools:ignore="NestedWeights">
                            <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="15dp"
                                app:cardBackgroundColor="@color/colorPrimary"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="8dp">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:onClick="clickInternet"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:layout_width="60dp"
                                        android:padding="3dp"
                                        android:layout_height="0dp"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="15dp"
                                        android:layout_weight="1"
                                        android:src="@drawable/ic_main_internet" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="1"
                                        android:gravity="center|top"
                                        android:text="@string/internet_packets"
                                        android:textColor="#fff"
                                        android:textSize="14sp"
                                        android:textStyle="bold" />
                                </LinearLayout>
                            </android.support.v7.widget.CardView>

                            <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="15dp"
                                app:cardBackgroundColor="@color/colorPrimary"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="8dp">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:onClick="clickTarrif"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:layout_width="60dp"
                                        android:layout_height="0dp"
                                        android:padding="3dp"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="15dp"
                                        android:layout_weight="1"
                                        android:src="@drawable/ic_phone_card_back" />


                                    <TextView
                                        android:id="@+id/main_tarrif_txt"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="1"
                                        android:gravity="center|top"
                                        android:text="@string/tariffs"
                                        android:textColor="#fff"
                                        android:textSize="16sp"
                                        android:textStyle="bold" />
                                </LinearLayout>
                            </android.support.v7.widget.CardView>

                            <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="15dp"
                                app:cardBackgroundColor="@color/colorPrimary"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="8dp">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:onClick="clickService"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:layout_width="60dp"
                                        android:layout_height="0dp"
                                        android:padding="3dp"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="15dp"
                                        android:layout_weight="1"
                                        android:src="@drawable/ic_main_service" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="1"
                                        android:gravity="center|top"
                                        android:text="@string/services"
                                        android:textColor="#fff"
                                        android:textSize="16sp"
                                        android:textStyle="bold" />
                                </LinearLayout>
                            </android.support.v7.widget.CardView>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_margin="6dp"

                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">
                                <android.support.v7.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="15dp"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:layout_marginRight="10dp"
                                    android:layout_marginBottom="15dp"
                                    app:cardBackgroundColor="@color/colorPrimary"
                                    app:cardCornerRadius="15dp"
                                    app:cardElevation="8dp">
                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:onClick="clickBalance"
                                        android:orientation="vertical"
                                        tools:ignore="NestedWeights">

                                        <ImageView
                                            android:layout_width="50dp"
                                            android:layout_height="0dp"

                                            android:layout_gravity="center"
                                            android:layout_marginTop="15dp"
                                            android:layout_weight="1"
                                            android:background="@drawable/ic_money" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="1"
                                            android:gravity="center|top"
                                            android:text="@string/balance"
                                            android:textColor="#fff"
                                            android:textSize="16sp"
                                            android:textStyle="bold" />
                                    </LinearLayout>
                                </android.support.v7.widget.CardView>

                                <android.support.v7.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="15dp"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:layout_marginRight="10dp"
                                    android:layout_marginBottom="15dp"
                                    app:cardBackgroundColor="@color/colorPrimary"
                                    app:cardCornerRadius="15dp"
                                    app:cardElevation="8dp">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:onClick="clickMinute"
                                        android:orientation="vertical">


                                        <ImageView
                                            android:layout_width="60dp"
                                            android:layout_height="0dp"
                                            android:padding="3dp"
                                            android:layout_gravity="center"
                                            android:layout_marginTop="15dp"
                                            android:layout_weight="1"
                                            android:src="@drawable/ic_main_minute" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="1"
                                            android:gravity="center|top"
                                            android:text="@string/minutes_packages"
                                            android:textColor="#fff"
                                            android:textSize="16sp"
                                            android:textStyle="bold" />
                                    </LinearLayout>
                                </android.support.v7.widget.CardView>
                                <android.support.v7.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="15dp"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:layout_marginRight="10dp"
                                    android:layout_marginBottom="15dp"
                                    app:cardBackgroundColor="@color/colorPrimary"
                                    app:cardCornerRadius="15dp"
                                    app:cardElevation="8dp">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:onClick="clickUseful"
                                        android:orientation="vertical">

                                        <ImageView
                                            android:layout_width="68dp"
                                            android:layout_height="0dp"
                                            android:padding="3dp"
                                            android:layout_gravity="center"
                                            android:layout_marginTop="15dp"
                                            android:layout_weight="1"
                                            android:src="@drawable/useful" />

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="1"
                                            android:gravity="center|top"
                                            android:text="@string/useful"
                                            android:textColor="#fff"
                                            android:textSize="16sp"
                                            android:textStyle="bold" />
                                    </LinearLayout>
                                </android.support.v7.widget.CardView>

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:max="5"
                            android:numStars="5"
                            android:rating="5"
                            android:stepSize="1"
                            android:theme="@style/rating_back" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:textStyle="bold"
                            android:onClick="rate_click"
                            android:textSize="19sp"
                            android:text="@string/rate"
                            android:textColor="@color/colorPrimary" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>